--- a/cashjournal/templates/cashjournal/index.html
+++ b/cashjournal/templates/cashjournal/index.html
@@ -59,7 +59,7 @@
           <li class="nav-item" style="margin: 3%">
             <a type="button" class="btn btn-info btn-lg" 
             data-toggle="modal" data-target="#gerarrelatorio">
-            Gerar Relatório
+            Relatório em PDF
             </a>
           </li>
         </ul>
@@ -75,7 +75,10 @@
             <div class="container" style="width: 100%">
               {% if messages %}
                 {% for message in messages %}
-                    <div class="well well-lg">{{ message }}</div>
+                    <div class="alert alert-success alert-dismissable">
+                      <button type="button" class="close" data-dismiss="alert">&times;</button>
+                      {{ message }}
+                    </div>
                 {% endfor %}
               {% endif %}
             </div>
@@ -277,7 +280,7 @@
         <!-- End Modal New Exit-->
 
 
-        <!-- Modal Gerar Relatório-->
+        <!-- Modal Generate Report-->
         <div id="gerarrelatorio" class="modal fade" role="dialog">
           <div class="modal-dialog">
 
@@ -325,9 +328,9 @@
 
           </div>
         </div>
-        <!-- Fim Modal Gerar Relatório-->
+        <!-- Fim Modal Generate Report-->
 
-        <!-- Modal Pesquisa-->
+        <!-- Modal Search-->
         <div id="searchlaunch" class="modal fade" role="dialog">
           <div class="modal-dialog">
 
@@ -360,7 +363,7 @@
                       <tr>
                         <td><input type="button" 
                           onclick="search_launch();" data-dismiss="modal"
-                          value="Pesquisa"></td>
+                          value=" Pesquisa"></td>
                       </tr>
                     </tbody>
                   </table>
