--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -51,7 +51,8 @@
 				      	</a>
 				      </li>
 				      <li>
-				      	<a href="#">Tributos</a>
+				      	<a href="{% url 'controltributes:index' %}">
+				      	Controle de Tributos</a>
 				      </li>
 				      
 				    </ul>
