--- a/controltributes/templates/controltributes/index.html
+++ b/controltributes/templates/controltributes/index.html
@@ -119,6 +119,8 @@
                     <td>{{ tribute.period }}</td>
                     <td>
                       <button type="button" class="btn btn-default" 
+                      id="{{tribute.id}}" 
+                      onclick="paymentsRelateds(this.id);" 
                       title="Exibir pagamentos relacionados">
                         Pagamentos
                       </button>
