--- a/controltributes/templates/controltributes/index.html
+++ b/controltributes/templates/controltributes/index.html
@@ -52,7 +52,7 @@
           </li>
           <li class="nav-item" style="margin: 3%">
             <a type="button" class="btn btn-info btn-lg" 
-            data-toggle="modal" data-target="#searchtribute">
+            data-toggle="modal" data-target="#search_for_period">
             Pesquisa por Período
             </a>
           </li>
@@ -283,6 +283,59 @@
           </div>
         </div>
         <!-- End Modal New Payment -->
+
+
+        <!-- Modal Search Period-->
+        <div id="search_for_period" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" 
+                data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Pesquisa</h4>
+              </div>
+
+              <div class="modal-body">
+
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th>Início</th>
+                        <th>Fim</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td><input id="iniciosearch"
+                        onkeyup="get_date(this);" 
+                          placeholder="DD/MM/AAAA"></td>
+                        <td><input id="fimsearch" 
+                          onkeyup="get_date(this);"
+                          placeholder="DD/MM/AAAA"></td>
+                      </tr>
+                      <tr>
+                        <td><input type="button" 
+                          onclick="search_for_period();" data-dismiss="modal"
+                          value=" Pesquisa"></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                
+              </div>
+              
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" 
+                data-dismiss="modal">Close</button>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- End Modal Search Period-->
+
+
       </div>
 
       </div>
